src/objects/CPQ_In_Scope_DWP__c.object
<CustomObject>
    <fields>
        <fullName>DWP_Multiplier__c</fullName>
        <label>DWP Multiplier</label>
        <precision>11</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DWP_Range_End__c</fullName>
        <label>DWP Range End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWP_Range_Start__c</fullName>
        <label>DWP Range Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DWP_Range_Type__c</fullName>
        <label>DWP Range Type</label>
        <picklist>
            <picklistValues>
                <fullName>Increase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buffer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>In-Scope Delta DWP Ranges</relationshipLabel>
        <relationshipName>CPQ_In_Scope_DWP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Amount__c</fullName>
        <label>Premium Amount</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>In-Scope DWP</label>
    <nameField>
        <displayFormat>Range-{000000}</displayFormat>
        <label>Range Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In-Scope DWPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>